--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "marqweee",
-  "name": "Marqweee",
+  "name": "Marqweee!",
   "version": "1.0.0",
   "main": "index.html",
   "host": [
@@ -18,10 +18,10 @@
     },
     {
       "type": "panel",
-      "id": "vanilla",
+      "id": "mainContent",
       "minimumSize": {
-        "width": 230,
-        "height": 200
+        "width": 150,
+        "height": 300
       },
       "maximumSize": {
         "width": 2000,
@@ -32,8 +32,8 @@
         "height": 300
       },
       "preferredFloatingSize": {
-        "width": 230,
-        "height": 300
+        "width": 150,
+        "height": 350
       },
       "icons": [
         {
@@ -70,8 +70,14 @@
         }
       ],
       "label": {
-        "default": "Starter Panel"
+        "default": "Marqweee!"
       }
+    },
+    {
+      "type": "panel",
+      "id": "o_SelectLayerBounds",
+      "entry": "o_SelectLayerBounds.html",
+      "label": "Options - Select layer bounds"
     }
   ],
   "icons": [
