added github link to info and manifest

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,18 @@
   "featureFlags": {
     "enableSWCSupport": true
   },
+  "requiredPermissions": {
+    "launchProcess": {
+        "schemes": [
+            "https"
+        ]
+    },
+    "network": {
+        "domains": [
+            "https://github.com/Camlele/marqweee"
+        ]
+    }
+  },
   "manifestVersion": 5,
   "entrypoints": [
     {
